--- a/task2/index.html
+++ b/task2/index.html
@@ -11,12 +11,12 @@
     
 <main>
     <!-- <h1 class="head-text center">Registeration Page</h1> -->
-    <h1 class="head-text center">Already have an account? :)</h1>
+    <h1 class="main-head-text center">Already have an account? :)</h1>
 
     <div class="container center">
 
         <div class="card">
-            <h1 class="head-text center">Login into Account</h1>
+            <h1 class="card-head-text center">Login into Account</h1>
 
                 <form id="register-form" class="form">
                     
