add script and update class

--- a/task1/index.html
+++ b/task1/index.html
@@ -49,7 +49,7 @@
                     <input class="input-field" type="password" id="cpass" name="cpass">
                     <span class="error-msg"></span>
                 </div>
-                    <span class="registered-success"></span>
+                    <span class="registered-msg"></span>
 
                     <button class="btn-submit" id="submit">Sign Up</button>
                 </form>
@@ -58,7 +58,7 @@
 </main>
 
 <script src="./assets/bcrypt.js"></script>
-<script src="./script.js"></script>
+<script type="module" src="./script.js"></script>
 
 </body>
 </html>
