--- a/task2/index.html
+++ b/task2/index.html
@@ -41,7 +41,7 @@
 </main>
 
 <script src="./assets/bcrypt.js"></script>
-<script src="./script.js"></script>
+<script type="module" src="./script.js"></script>
 
 </body>
 </html>
