fix small issues

--- a/task3/index.html
+++ b/task3/index.html
@@ -44,15 +44,16 @@
         
           <div class="row">
           <div class="col-md-7">
-            <div class="hero-text">
+            <div class="hero-text p-5">
               <h1>Save yourself from digital attacks!</h1>
               <p><span class="text-highlight">Cybersecurity</span> that’s always a step ahead
                 Keep your internet use safe and private and your devices running smoothly with one of our award-winning, easy-to-use security plans.</p>
             </div>
           </div>
-          <div class="col-md-5 ">
-            <!-- Image -->
+          
+          <div class="col-md-5">
           </div>
+
         </div>
 
       </div>
@@ -184,7 +185,7 @@
     <footer class="py-5">
       <div class="container">
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-8 col-sm-12">
                 <span class="text-muted">© 2023 Cyber Secure Protection Ltd.</span>
                 <span class="text-muted text-highlight">Protected by Firewall</span>
 
